Tests/CompilerTests/negative/undefined-symbol.hylo
//! no-std

struct A {}
fun f(x: A.B) { () }
